--- a/_layouts/tutorial.html
+++ b/_layouts/tutorial.html
@@ -7,9 +7,16 @@
 
     <div class="page-content">
       <div class="wrapper">
+        {% include navigation.html %}
+
         {{ content }}
+	
+	<br/><br/>
+	{% include navigation.html %}
       </div>
+      
     </div>
+	
 
   </body>
 </html>
